# uptech_star

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  __init__.py  arena_contest.py  cds_test.py  close_loop_controller.py  closed_loop_controller.py  config.json  constant.py  default.py  demo.py  face_follow.py  keyboard_control.py  match_fangren.py  pick_up_ball.py  requirements.txt  screen.py  serial_helper.py  serial_test_helper.py  setup.py  spider.py  ultra_sensor.py  up_controller.py  uptech.py  valueTest.py  valueTest.py.py
FaceRecognition/: face_input.py  face_recognition_1.py  face_recognition_2.py
FaceRecognition/action/: action.py  uptech.py
FaceRecognition/images/: faces_data.json
FaceRecognition/model/: mobilenet_v2.py
FaceRecognition/speech/: speech.py
cache/: ActionFrame_cache  calculate_relative_angle_cache  compute_inferior_arc_cache  compute_relative_error_cache  new_action_frame_cache
cascades/: face.xml
garbage_pick/: color_detect.py  controller.py  main.py  utils.py
module/: actions.py  algrithm_tools.py  camera.py  camra.py  close_loop_controller.py  constant.py  db_tools.py  deprecated.py  fuzzy.py  i2c.py  inferrer_base.py  onboardsensors.py  os_tools.py  pid.py  reactor_base.py  screen.py  sensors.py  serial_helper.py  tagdetector.py  timer.py  up_controller.py  uptech.py  usb_controller.py  utils.py  watcher.py  xpose.py
src/: reg.c
vision_ai/: face_detection_ssd.py  object_detection_demo_ssd_async.py
vision_base/: apriltag_detect.py  color_detect.py  color_shape_detect.py  face_detector.py  tracker_dlib.py
(+8 files in other folders)
